Add image files for gallery

--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
     <nav class="top-nav">
         <div class="nav-container">
             <div class="nav-links">
-                <a href="index.html" class="nav-link active">Home</a>
-                <a href="generator.html" class="nav-link">Generator</a>
+                <a href="/" class="nav-link active">Home</a>
+                <a href="/generator" class="nav-link">Generator</a>
             </div>
         </div>
     </nav>
