--- a/generator.html
+++ b/generator.html
@@ -451,8 +451,8 @@
     <nav class="top-nav">
         <div class="nav-container">
             <div class="nav-links">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="generator.html" class="nav-link active">Generator</a>
+                <a href="/" class="nav-link">Home</a>
+                <a href="/generator" class="nav-link active">Generator</a>
             </div>
         </div>
     </nav>
