Add image files for gallery

--- a/generator.html
+++ b/generator.html
@@ -663,16 +663,16 @@
                 'Void pocket scanner', 'Quantum foam observer', 'Neural mesh camera', 'Plasma wave detector'
             ],
             'art-style': [
-                'Dark baroque surrealism', 'Electric field impressionism', 'Quantum foam symbolism', 'Brutalist fashion editorial',
-                'Holographic cyberpunk', 'Neural network abstract', 'Plasma storm expressionism', 'Crystal lattice minimalism',
-                'Void dimension surrealism', 'Quantum entanglement cubism', 'Neural pathway realism', 'Plasma cloud impressionism',
-                'Holographic projection futurism', 'Electric storm abstract', 'Crystal shard symbolism', 'Void space minimalism',
-                'Quantum foam surrealism', 'Neural mesh expressionism', 'Plasma wave cubism', 'Holographic shadow realism',
-                'Electric crystal impressionism', 'Void pocket abstract', 'Quantum field symbolism', 'Neural interface minimalism',
-                'Plasma storm surrealism', 'Holographic void expressionism', 'Electric storm cubism', 'Crystal lattice realism',
-                'Void dimension impressionism', 'Quantum entanglement abstract', 'Neural pathway symbolism', 'Plasma cloud minimalism',
-                'Holographic projection surrealism', 'Electric field expressionism', 'Crystal shard cubism', 'Void space realism',
-                'Quantum foam impressionism', 'Neural network abstract', 'Plasma storm symbolism', 'Holographic shadow minimalism'
+                'H.R. Giger', 'Art Nouveau meets sci-fi', 'Moebius x cyberpunk', 'Dark baroque surrealism',
+                'Alexander McQueen couture', '80s anime cyber aesthetics', 'Surreal photo-realism', 'Retro-futurist propaganda',
+                'Mystical realism', 'Vaporwave noir', 'Gothic cyber fantasy', 'David LaChapelle futurism',
+                'Blade Runner x Dune', 'Tribal-mech fusion', 'Astral Impressionism', 'AI-generated art glitch',
+                'Brutalist fashion editorial', 'Spiritual symbolism abstraction', 'Tattoo realism meets robotics', 'Neo-expressionist cyberpunk',
+                'Zaha Hadid architecture style', 'Studio Ghibli x cyberpunk', 'Jean Giraud Moebius', 'Frank Frazetta fantasy',
+                'Cindy Sherman performance art', 'Yayoi Kusama infinity rooms', 'Banksy street art futurism', 'Takashi Murakami superflat',
+                'Hieronymus Bosch meets tech', 'Salvador Dali surrealism', 'Andy Warhol pop art', 'Bauhaus minimalism',
+                'Art Deco meets neon', 'Steampunk Victorian', 'Biomechanical horror', 'Cyber-gothic architecture',
+                'Neo-noir cinematography', 'Psychedelic cyberpunk', 'Deconstructivist fashion', 'Post-human aesthetics'
             ],
             'composition': [
                 'Looking into the light', 'Glitch-reality fracture view', 'Void-touched negative space', 'Neural pathway network shot',
