--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prompt Generator</title>
+    <title>AI Prompt Generator - Create Cyberpunk Art Prompts | Free Tool</title>
+    <meta name="description" content="Generate millions of unique AI image prompts for Midjourney, DALL-E, and Stable Diffusion. Free cyberpunk prompt generator with 40,000+ combinations.">
+    <meta name="keywords" content="AI prompt generator, Midjourney prompts, DALL-E prompts, cyberpunk prompts, AI art generator, prompt engineering">
+    <meta name="author" content="Prompt Generator">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <style>
         * {
