Add image files for gallery

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Generate millions of unique AI image prompts for Midjourney, DALL-E, and Stable Diffusion. Free cyberpunk prompt generator with 40,000+ combinations.">
     <meta name="keywords" content="AI prompt generator, Midjourney prompts, DALL-E prompts, cyberpunk prompts, AI art generator, prompt engineering">
     <meta name="author" content="Prompt Generator">
+    <meta name="google-site-verification" content="UqiP5kuv3yinAa6QMWOxyIc4r5C3Nbowiu7CtOog9c8" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <style>
         * {
