--- a/generator.html
+++ b/generator.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Advanced AI prompt generator with 10 categories and 40,000+ combinations. Create custom prompts for Midjourney, DALL-E, and Stable Diffusion.">
     <meta name="keywords" content="AI prompt generator, Midjourney prompts, DALL-E prompts, cyberpunk prompts, AI art generator, prompt engineering">
     <meta name="author" content="Prompt Generator">
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400&display=swap" rel="stylesheet">
