Add image files for gallery

--- a/index.html
+++ b/index.html
@@ -794,14 +794,14 @@
                 'Medieval stained glass', 'Fantasy anime epic', 'Pre-Raphaelite magic realism', 'Mystical illuminated vellum', 'Fantasy surreal expressionism'
             ],
             'composition': [
-                'Hero framed by glowing runes', 'Standing before portal of light', 'Surrounded by summoned creatures', 'Cloaked in fog and fire', 'Sword raised under moonlight',
-                'Spell circle encircling subject', 'Sitting on throne of bones', 'Reaching toward the stars', 'Wings unfurled in radiant pose', 'Locked in duel with unseen foe',
-                'Kneeling in prayer before relic', 'Crowned with heavenly light', 'Leaning on broken sword', 'Emerging from forest shadows', 'Draped in flowing cape',
-                'Holding glowing staff aloft', 'Encircled by spectral spirits', 'Ascending staircase of light', 'Facing colossal dragon', 'Wading through battlefield smoke',
-                'Silhouette against burning horizon', 'Clutching ancient book', 'Hands glowing with power', 'Cloak swirling in storm winds', 'Standing atop ruined keep',
-                'Crowned amid golden aura', 'Shadow creeping from behind', 'Reflecting in mystic pool', 'Engulfed in swirling fog', 'Facing shattered portal',
-                'Back-to-back with ally', 'Emerging from enchanted mist', 'Surrounded by floating relics', 'Charging into combat', 'Arms raised to heavens',
-                'Resting with sword planted', 'Fallen in battle pose', 'Spell shockwave radiating', 'Glowing runes beneath feet', 'Silhouette on cliff at dawn'
+                'Center-framed portrait', 'Wide-angle full-body shot', 'Dramatic overhead light', 'Soft bokeh background', 'Tight close-up on magical detail',
+                'Rule of thirds for subject', 'Foggy mid-ground figures', 'Low-angle cinematic shot', 'Portrait shot with symmetry', 'Off-center crop',
+                'Overexposed backlight silhouette', 'Profile-only character', 'From-behind with soft focus', 'High contrast gold & shadow', 'Abstract floating pose',
+                'Standing within glowing circle', 'Arms lifted toward sky', 'Looking into radiant light', 'Surrounded by mist', 'Fragmented arcane frame',
+                'Celestial convergence', 'Rune circle expansion', 'Arcane burst formation', 'Light beam collapse', 'Starfield fragmentation',
+                'Divine radiance burst', 'Mystical shatter frame', 'Cosmic emergence', 'Silhouette against firelight', 'Foreground haze framing',
+                'Heroic stance symmetry', 'Wide shot with horizon glow', 'Subject framed by ruins', 'Close-up with glowing eyes', 'Soft focus on flowing robes',
+                'Low-angle staff silhouette', 'Fragmented divine frame', 'Cinematic temple alignment', 'Epic backlit framing'
             ]
             },
             'historical-realism': {
@@ -900,14 +900,14 @@
                 'Ink crosshatching illustration'
             ],
             'composition': [
-                'Hero centered in battlefield', 'Duelers framed off-center', 'Council in royal chamber', 'Close-up on hands holding scroll', 'Marching soldiers in line',
-                'Archer taking aim in foreground', 'Knight atop hill overlooking valley', 'Candlelit study with scholar', 'Soldiers preparing for battle', 'Ruler at throne with attendants',
-                'Horseback patrol in low-angle', 'Ship deck, wide view', 'Village street market, mid-shot', 'Battle chaos with top-down view', 'Monk in cloister, symmetry framing',
-                'Noble portrait, centered', 'Sunlit columns framing subject', 'Spyglass view over enemy camp', 'Blacksmith at forge, close focus', 'Cannon firing scene, low-angle',
-                'Tavern interior, multiple figures', 'Messenger running, POV shot', 'Soldier kneeling by fallen comrade', 'Temple ritual, wide angle', 'Palace hallway, vanishing point',
-                'Colonial dock, birds-eye view', 'Shipboard duel mid-frame', 'Fencer in duel, extreme close-up', 'Re-enactment-style tableau', 'Scout peering from hilltop',
-                'Siege tower in frame, dramatic angle', 'Candle-lit scribe writing', 'Horse charging low-angle', 'Knight bowing to king', 'Mercenary encampment, high-angle',
-                'Crowd in market square', 'Soldier adjusting armor close-up', 'Royal procession, wide frame', 'Battlefield overview, panorama', 'Archer in shadowed forest'
+                'Center-framed portrait', 'Wide-angle full-body shot', 'Overhead map-table framing', 'Soft blurred background', 'Tight close-up on insignia',
+                'Rule of thirds alignment', 'Foreground smoke framing', 'Low-angle battlefield view', 'Symmetrical portrait pose', 'Off-center subject framing',
+                'Backlit silhouette against horizon', 'Profile-only figure', 'From-behind composition', 'Stark contrast black & white', 'Static standing pose',
+                'Hands resting on sword or cane', 'Figure looking into light', 'Surrounded by banners or smoke', 'Grouped symmetrical formation', 'Fragmented shadow frame',
+                'Dust cloud convergence', 'Shattered glass alignment', 'Torchlight radiance', 'Battlefield haze dispersion', 'Rising smoke frame',
+                'Banner fold symmetry', 'Cracked stone pattern', 'Historic collapse framing', 'Foreground weapon silhouette', 'Wide shot of formation symmetry',
+                'Subject framed by ruins', 'Low-angle march perspective', 'Close-up with fabric detail', 'Soft light through window', 'Overhead spotlight framing',
+                'Silhouette against wall mural', 'High-contrast staged pose', 'Epic horizon framing', 'Symmetrical throne view', 'Dramatic overhead light'
             ]
             },
             'gothic-horror': {
@@ -1008,15 +1008,14 @@
                 'Surreal dream-horror painting'
             ],
             'composition': [
-                'Haunted figure centered', 'Off-center lurking shadow', 'Candle-lit ritual circle', 'Character in foggy doorway', 'Silhouette in crypt archway',
-                'Ghost emerging from mist', 'Over-the-shoulder of lurking menace', 'Close-up on bloodied hand', 'Creepy hallway depth', 'Low-angle haunted tower',
-                'Figure framed in broken window', 'Top-down cemetery scene', 'Overhead cult gathering', 'Foreground skeletal remains', 'Character creeping along corridor',
-                'Silhouette against lightning', 'Character holding cursed object', 'Shadow creeping across floor', 'High-angle staircase descent', 'Half-hidden figure in doorway',
-                'Figure emerging from shadows', 'Cloaked figure in alleyway', 'Close-up on haunted eyes', 'Body sprawled in crypt', 'Figure reflected in broken mirror',
-                'Silhouette against full moon', 'Foreground spider webs framing subject', 'Mid-shot of ritual enactment', 'Creeping tendrils in foreground', 'Figure kneeling by tomb',
-                'High-contrast light and shadow framing', 'Ghostly figure floating', 'Over-the-shoulder witness POV', 'Figure walking down misty path', 'Extreme low-angle tomb shot',
-                'Wide shot of haunted battlefield', 'Twilight graveyard panorama', 'Creepy figure in corner', 'Silhouette on tower battlements', 'Hands reaching from shadows',
-                'Fog-filled alley with distant figure'
+                'Center-framed portrait', 'Wide-angle figure in room', 'Overhead candlelit framing', 'Soft depth blur', 'Tight close-up on detail',
+                'Rule of thirds portrait', 'Fog framing mid-ground', 'Low-angle looming shot', 'Symmetrical gothic framing', 'Cropped off-center focus',
+                'Backlit silhouette through mist', 'Profile-only character', 'From-behind shadow view', 'Harsh black and red contrast', 'Abstract looming pose',
+                'Arms reaching upward', 'Standing amidst shadows', 'Looking into dim light', 'Surrounded by mist', 'Fragmented broken-glass frame',
+                'Blood-red glow convergence', 'Shadow burst formation', 'Candlelight radiance', 'Gothic shatter symmetry', 'Fog collapse framing',
+                'Web-like fracture frame', 'Darkness expansion', 'Moonlit dispersion', 'Close-up on pale face', 'Silhouette in doorway',
+                'Wide shot with cathedral light', 'Foreground iron gate framing', 'Soft flickering illumination', 'Overhead dramatic framing', 'Subject against cracked wall',
+                'Close-up with blood detail', 'Symmetry with candles', 'High-contrast corridor framing', 'Subject emerging from fog', 'Shattered frame overlay'
             ]
             },
             'myth-legend': {
@@ -1115,15 +1114,14 @@
                 'Heroic epic oil painting', 'Mythological sculpture study'
             ],
             'composition': [
-                'Hero framed in divine light', 'God on throne above clouds', 'Dragon coiled around cliff', 'Figure standing on mountain peak', 'Celestial battle scene',
-                'Hero approaching portal', 'Figure in misty forest', 'Overhead battlefield', 'Silhouette against stormy sky', 'Epic duel mid-frame',
-                'Cloaked figure at cliff edge', 'Floating islands panorama', 'Character with wings spread', 'Hero holding magical weapon', 'Divine council scene',
-                'Creature emerging from cave', 'Ship approaching enchanted city', 'Character atop mountain', 'Temple interior symmetry', 'Figure walking into portal',
-                'Epic clash of gods', 'Foreground magical artifact', 'Mid-shot of hero in action', 'Spirit rising from ground', 'Low-angle dragon perspective',
-                'High-angle battlefield overview', 'Hero kneeling by sacred flame', 'Group assembled for ritual', 'Silhouette of hero against sun', 'Creature leaping toward camera',
-                'Figure reflected in magical lake', 'Epic wide shot of floating city', 'Action-focused duel composition', 'Character climbing cliff', 'Sacred altar centered',
-                'Top-down magical circle view', 'Hero surveying horizon', 'Epic chase through forest', 'Floating hero over clouds', 'Character framed by lightning',
-                'Celestial alignment framing'
+                'Center-framed portrait', 'Wide-angle heroic stance', 'Dramatic overhead light', 'Soft blurred background', 'Close-up on artifact detail',
+                'Rule of thirds alignment', 'Mist-shrouded mid-ground', 'Low-angle epic framing', 'Symmetrical temple pose', 'Off-center mythic crop',
+                'Backlit silhouette against sky', 'Profile-only figure', 'From-behind framing', 'High contrast golden light', 'Abstract floating pose',
+                'Arms lifted toward heavens', 'Standing within sacred circle', 'Looking into radiant light', 'Surrounded by aura', 'Fragmented divine frame',
+                'Celestial convergence', 'Rune circle expansion', 'Arcane burst formation', 'Starfield alignment', 'Divine light collapse',
+                'Mystical frame dispersion', 'Epic radiance burst', 'Heroic emergence', 'Silhouette against flames', 'Foreground mist framing',
+                'Subject framed by ruins', 'Wide-angle throne shot', 'Close-up with glowing relic', 'Soft focus on sacred robes', 'Low-angle divine silhouette',
+                'Temple symmetry', 'Cinematic ritual framing', 'Epic wide horizon', 'Backlit mountain framing', 'Heroic reflection symmetry'
             ]
             },
             'nature-spirit': {
@@ -1334,14 +1332,14 @@
                 'Augmented reality aesthetic'
             ],
             'composition': [
-                'Centered figure in neon plaza', 'Off-center floating mannequin', 'Foreground glitch particles', 'Over-the-shoulder street POV', 'Low-angle building framing',
-                'High-angle city overview', 'Silhouette against neon signs', 'Character reflected in puddle', 'Mid-shot in alley haze', 'Foreground floating holograms',
-                'Wide-angle plaza', 'Close-up low-focus on hands', 'Figure framed by neon billboard', 'Tilted street composition', 'Drone perspective over traffic',
-                'Macro-focus on neon details', 'Foreground wires framing figure', 'Backlit street figure', 'Character walking toward camera', 'Wide-angle rooftop',
-                'Floating figure mid-frame', 'Perspective through window reflection', 'City street depth composition', 'Overhead crosswalk framing', 'Low-angle alley shadows',
-                'Foreground neon puddles', 'Silhouette against city skyline', 'Mid-frame drifting smoke', 'Character emerging from shadows', 'Wide-angle market scene',
-                'Floating elements framing figure', 'Tilted holographic signs', 'Backlit holographic figure', 'Top-down pedestrian street', 'Low-angle building reflection',
-                'Foreground glitch reflections', 'Wide shot of urban maze', 'Character framed by neon haze', 'Cinematic alley framing', 'High-angle plaza reflection'
+                'Center-framed portrait', 'Wide-angle urban figure', 'Dramatic overhead light', 'Soft blurred background', 'Close-up on surreal object',
+                'Rule of thirds urban framing', 'Foreground haze framing', 'Low-angle city shot', 'Symmetrical modern framing', 'Off-center experimental crop',
+                'Backlit silhouette against skyline', 'Profile-only subject', 'From-behind urban composition', 'High contrast neon framing', 'Abstract floating pose',
+                'Arms lifted in distortion', 'Looking into warped light', 'Surrounded by glitch aura', 'Fragmented surreal frame', 'Light beam distortion',
+                'Geometric frame convergence', 'Glass reflection symmetry', 'Shadow fragmentation', 'Urban collapse framing', 'Glitch burst dispersion',
+                'Abstract radiance', 'Surreal shatter effect', 'Dreamlike emergence', 'Silhouette in fog', 'Foreground reflection framing',
+                'Wide shot of plaza', 'Close-up warped detail', 'Soft haze illumination', 'Overhead spotlight crop', 'Low-angle billboard framing',
+                'Symmetry with lights', 'Cinematic distortion framing', 'Subject warped in frame', 'Fragmented reality overlay', 'Neon glow convergence'
             ]
             },
             'pop-retro': {
@@ -1552,15 +1550,14 @@
                 'Floating form illustration'
             ],
             'composition': [
-                'Centered abstract object', 'Off-center morphing form', 'Foreground floating shards', 'Over-the-shoulder energy POV', 'Low-angle prism shot',
-                'High-angle void overview', 'Silhouette against floating light', 'Mid-frame liquid object', 'Foreground floating fragments', 'Wide-angle abstract terrain',
-                'Close-up low-focus on crystal shard', 'Tilted fractal composition', 'Floating figure mid-frame', 'Drone perspective over morphing forms', 'Macro focus on prism detail',
-                'Foreground ribbons framing object', 'Backlit abstract silhouette', 'Wide shot of floating plane', 'Object reflected in mirrored surface', 'Tilted floating prism',
-                'High-angle fractal plane', 'Object walking through floating shards', 'Low-angle prism reflection', 'Mid-shot morphing form', 'Foreground floating light ribbons',
-                'Top-down floating fractal', 'Floating crystal mid-frame', 'Backlit prism silhouette', 'Wide shot of abstract void', 'Mid-frame liquid form',
-                'Over-the-shoulder prism POV', 'Foreground glowing particle framing', 'Character reflected in energy plane', 'High-angle floating structure', 'Low-angle prism shards',
-                'Floating shards framing object', 'Silhouette against prism glow', 'Mid-shot energy streaks', 'Foreground prism reflection', 'Wide-angle morphing landscape',
-                'Tilted abstract structure framing'
+                'Center-framed abstract form', 'Wide-angle surreal framing', 'Dramatic overhead light', 'Soft blurred background', 'Close-up on geometric detail',
+                'Rule of thirds with shapes', 'Foreground haze or color block', 'Low-angle framing', 'Symmetrical abstract layout', 'Off-center crop',
+                'Backlit silhouette shape', 'Profile-only form', 'From-behind abstract perspective', 'High contrast monochrome', 'Floating abstract pose',
+                'Arms raised geometric framing', 'Looking into light field', 'Surrounded by void', 'Fragmented abstract frame', 'Beam of light convergence',
+                'Geometric collapse framing', 'Shape symmetry', 'Color burst framing', 'Fractured overlay pattern', 'Abstract dispersion',
+                'Light radiance burst', 'Conceptual emergence', 'Silhouette within shapes', 'Foreground distortion framing', 'Wide shot of minimal form',
+                'Close-up texture framing', 'Soft glow illumination', 'Overhead spotlight on form', 'Low-angle distortion crop', 'Abstract symmetry framing',
+                'Cinematic minimal framing', 'Subject warped in pattern', 'Fragmented conceptual overlay', 'Surreal symmetry framing', 'Abstract expansion'
             ]
             },
             'cosmic-scifi': {
