--- a/generator.html
+++ b/generator.html
@@ -20,7 +20,7 @@
 
         body {
             font-family: 'Bebas Neue', 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: #0a0a0f;
+            background: #000000;
             color: #e5e7eb;
             line-height: 1.6;
             min-height: 100vh;
