Add railway backend

--- a/generator.html
+++ b/generator.html
@@ -553,6 +553,7 @@
             <div class="nav-links">
                 <a href="/" class="nav-link">Home</a>
                 <a href="/generator" class="nav-link active">Generator</a>
+                <a href="../blog/" class="nav-link">Blog</a>
             </div>
         </div>
     </nav>
