--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@
             <div class="nav-links">
                 <a href="/" class="nav-link active">Home</a>
                 <a href="/generator" class="nav-link">Generator</a>
+                <a href="./blog/" class="nav-link">Blog</a>
             </div>
         </div>
     </nav>
