Fix Railway deployment configuration and backend issues

--- a/generator.html
+++ b/generator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Prompt Generator Tool - Create Custom Cyberpunk Prompts</title>
+    <title>AI Prompt Generator Tool - Create Custom AI Image Prompts</title>
     <meta name="description" content="Advanced AI prompt generator with 10 categories and 40,000+ combinations. Create custom prompts for Midjourney, DALL-E, and Stable Diffusion.">
     <meta name="keywords" content="AI prompt generator, Midjourney prompts, DALL-E prompts, cyberpunk prompts, AI art generator, prompt engineering">
     <meta name="author" content="Prompt Generator">
