--- a/blog.html
+++ b/blog.html
@@ -75,20 +75,11 @@
             max-width: 1400px;
             margin: 0 auto;
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-end;
             align-items: center;
             padding: 16px 20px;
         }
 
-        .logo {
-            color: #00ff88;
-            font-family: 'Bebas Neue', sans-serif;
-            font-size: 1.8rem;
-            font-weight: 400;
-            letter-spacing: 0.1em;
-            text-decoration: none;
-            text-shadow: 0 0 10px rgba(0, 255, 136, 0.3);
-        }
 
         .nav-links {
             display: flex;
@@ -380,7 +371,6 @@
 <body>
     <nav class="top-nav">
         <div class="nav-container">
-            <a href="/" class="logo">CYBERPROMPT</a>
             <div class="nav-links">
                 <a href="/" class="nav-link">Home</a>
                 <a href="/generator" class="nav-link">Generator</a>
