Fix Railway deployment configuration and backend issues

--- a/blog.html
+++ b/blog.html
@@ -100,15 +100,13 @@
         }
 
         .nav-link:hover {
-            color: #00ff88;
-            background: rgba(0, 255, 136, 0.1);
-            box-shadow: 0 0 20px rgba(0, 255, 136, 0.2);
+            background: rgba(168, 85, 247, 0.1);
+            color: #ffffff;
         }
 
         .nav-link.active {
-            color: #00ff88;
-            background: rgba(0, 255, 136, 0.15);
-            box-shadow: 0 0 15px rgba(0, 255, 136, 0.3);
+            background: rgba(168, 85, 247, 0.2);
+            color: #ffffff;
         }
 
         .container {
@@ -164,7 +162,7 @@
 
         .newsletter-signup {
             background: rgba(10, 10, 15, 0.8);
-            border: 1px solid rgba(0, 255, 136, 0.3);
+            border: 1px solid rgba(168, 85, 247, 0.3);
             border-radius: 12px;
             padding: 40px;
             margin: 60px 0;
@@ -175,7 +173,7 @@
         .newsletter-title {
             font-family: 'Bebas Neue', sans-serif;
             font-size: 2rem;
-            color: #00ff88;
+            color: #a855f7;
             margin-bottom: 15px;
             letter-spacing: 0.05em;
         }
@@ -208,8 +206,8 @@
 
         .email-input:focus {
             outline: none;
-            border-color: #00ff88;
-            box-shadow: 0 0 15px rgba(0, 255, 136, 0.3);
+            border-color: #a855f7;
+            box-shadow: 0 0 15px rgba(168, 85, 247, 0.3);
             background: rgba(255, 255, 255, 0.08);
         }
 
@@ -219,22 +217,22 @@
 
         .subscribe-btn {
             padding: 15px 30px;
-            background: linear-gradient(135deg, #00ff88, #00cc6a);
+            background: linear-gradient(135deg, #a855f7, #ec4899);
             border: none;
             border-radius: 8px;
-            color: #000;
+            color: #ffffff;
             font-family: 'Bebas Neue', sans-serif;
             font-size: 1.1rem;
             font-weight: 400;
             letter-spacing: 0.05em;
             cursor: pointer;
             transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(0, 255, 136, 0.3);
+            box-shadow: 0 4px 15px rgba(168, 85, 247, 0.3);
         }
 
         .subscribe-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(0, 255, 136, 0.4);
+            box-shadow: 0 6px 20px rgba(168, 85, 247, 0.4);
         }
 
         .blog-grid {
@@ -255,8 +253,8 @@
 
         .blog-post:hover {
             transform: translateY(-5px);
-            border-color: rgba(0, 255, 136, 0.3);
-            box-shadow: 0 10px 30px rgba(0, 255, 136, 0.1);
+            border-color: rgba(168, 85, 247, 0.3);
+            box-shadow: 0 10px 30px rgba(168, 85, 247, 0.1);
         }
 
         .post-image {
@@ -284,12 +282,12 @@
         }
 
         .post-date {
-            color: #00ff88;
+            color: #a855f7;
         }
 
         .post-category {
-            background: rgba(0, 255, 136, 0.1);
-            color: #00ff88;
+            background: rgba(168, 85, 247, 0.1);
+            color: #a855f7;
             padding: 4px 12px;
             border-radius: 20px;
             font-size: 0.8rem;
@@ -311,7 +309,7 @@
         }
 
         .read-more {
-            color: #00ff88;
+            color: #a855f7;
             text-decoration: none;
             font-weight: 500;
             transition: all 0.3s ease;
@@ -321,8 +319,8 @@
         }
 
         .read-more:hover {
-            color: #00cc6a;
-            text-shadow: 0 0 10px rgba(0, 255, 136, 0.5);
+            color: #ec4899;
+            text-shadow: 0 0 10px rgba(168, 85, 247, 0.5);
         }
 
         .footer {
@@ -353,7 +351,7 @@
         }
 
         .footer-link:hover {
-            color: #00ff88;
+            color: #a855f7;
         }
 
         .footer-text {
@@ -466,14 +464,14 @@
             
             setTimeout(() => {
                 button.textContent = 'Subscribed!';
-                button.style.background = 'linear-gradient(135deg, #00cc6a, #00aa55)';
+                button.style.background = 'linear-gradient(135deg, #ec4899, #be185d)';
                 document.getElementById('email-input').value = '';
                 
                 // Reset after 3 seconds
                 setTimeout(() => {
                     button.textContent = 'Subscribe';
                     button.style.opacity = '1';
-                    button.style.background = 'linear-gradient(135deg, #00ff88, #00cc6a)';
+                    button.style.background = 'linear-gradient(135deg, #a855f7, #ec4899)';
                 }, 3000);
             }, 1500);
         });
@@ -506,7 +504,7 @@
             if (blogPosts.length === 0) {
                 container.innerHTML = `
                     <div class="no-posts" style="text-align: center; padding: 60px 20px; color: #9ca3af;">
-                        <h2 style="color: #00ff88; margin-bottom: 20px;">No blog posts yet</h2>
+                        <h2 style="color: #a855f7; margin-bottom: 20px;">No blog posts yet</h2>
                         <p>Check back soon for new content!</p>
                     </div>
                 `;
