--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Latest insights on AI art, cyberpunk culture, and prompt engineering. Stay updated with the future of digital creativity.">
     <meta name="keywords" content="AI art blog, cyberpunk culture, prompt engineering, AI creativity, digital art">
     <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="apple-touch-icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <style>
         * {
