--- a/blog.html
+++ b/blog.html
@@ -447,7 +447,7 @@
             <p class="footer-text">
                 © 2024 Prompt Generator created by OddestHistory_ All rights reserved. | 
                 <a href="https://x.com/OddestHistory_" target="_blank" class="footer-link">X</a> | 
-                <a href="terms.html" target="_blank" class="footer-link">Terms of Service</a>
+                <a href="/terms" target="_blank" class="footer-link">Terms of Service</a>
             </p>
         </div>
     </footer>
