Fix Railway deployment configuration and backend issues

--- a/blog.html
+++ b/blog.html
@@ -311,18 +311,27 @@
         }
 
         .read-more {
-            color: #a855f7;
-            text-decoration: none;
-            font-weight: 500;
+            padding: 12px 24px;
+            background: linear-gradient(135deg, #a855f7, #ec4899);
+            border: none;
+            border-radius: 8px;
+            color: #ffffff;
+            font-family: 'Bebas Neue', sans-serif;
+            font-size: 1.1rem;
+            font-weight: 400;
+            letter-spacing: 0.05em;
+            cursor: pointer;
             transition: all 0.3s ease;
+            text-decoration: none;
             display: inline-flex;
             align-items: center;
-            gap: 5px;
+            gap: 8px;
+            box-shadow: 0 4px 15px rgba(168, 85, 247, 0.3);
         }
 
         .read-more:hover {
-            color: #ec4899;
-            text-shadow: 0 0 10px rgba(168, 85, 247, 0.5);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(168, 85, 247, 0.4);
         }
 
         .footer {
