Add resend email integration

--- a/terms.html
+++ b/terms.html
@@ -269,7 +269,7 @@
         <div class="content">
             <h2>Terms of Service</h2>
             
-            <p><strong>Last updated:</strong> December 2024</p>
+            <p><strong>Last updated:</strong> September 2025</p>
 
             <h3>1. Acceptance of Terms</h3>
             <p>By accessing and using the Prompt Generator service, you accept and agree to be bound by the terms and provision of this agreement.</p>
@@ -278,7 +278,6 @@
             <p>Permission is granted to temporarily use the Prompt Generator for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:</p>
             <ul>
                 <li>modify or copy the materials</li>
-                <li>use the materials for any commercial purpose or for any public display</li>
                 <li>attempt to reverse engineer any software contained on the website</li>
                 <li>remove any copyright or other proprietary notations from the materials</li>
             </ul>
@@ -303,6 +302,9 @@
 
             <h3>9. Contact Information</h3>
             <p>If you have any questions about these Terms of Service, please contact us at <a href="https://x.com/OddestHistory_" target="_blank" style="color: #00ff88;">@OddestHistory_</a> on X.</p>
+        
+            <h3>9. Sign up Information</h3>
+            <p>By signing up to our blog you agree to receive emails from us. You can unsubscribe at any time by clicking the unsubscribe link in the email. You also agree to your email address being stored and used to receive communications from us about other products and services created by OddestHistory</p>
         </div>
 
         <div style="text-align: center; margin-top: 40px;">
