Add resend email integration

--- a/terms.html
+++ b/terms.html
@@ -165,7 +165,7 @@
         .content h2 {
             font-family: 'Bebas Neue', sans-serif;
             font-size: 2rem;
-            color: #00ff88;
+            color: #ffffff;
             margin-bottom: 20px;
             letter-spacing: 0.05em;
         }
