Add resend email integration

--- a/generator.html
+++ b/generator.html
@@ -554,6 +554,7 @@
                 <a href="/" class="nav-link">Home</a>
                 <a href="/generator" class="nav-link active">Generator</a>
                 <a href="../blog/" class="nav-link">Blog</a>
+                <a href="/resources" class="nav-link">Resources</a>
             </div>
         </div>
     </nav>
