--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@
                 <a href="/" class="nav-link active">Home</a>
                 <a href="/generator" class="nav-link">Generator</a>
                 <a href="./blog/" class="nav-link">Blog</a>
+                <a href="/resources" class="nav-link">Resources</a>
             </div>
         </div>
     </nav>
