--- a/blog.html
+++ b/blog.html
@@ -411,6 +411,7 @@
                 <a href="/" class="nav-link">Home</a>
                 <a href="/generator" class="nav-link">Generator</a>
                 <a href="/blog" class="nav-link active">Blog</a>
+                <a href="/resources" class="nav-link">Resources</a>
             </div>
         </div>
     </nav>
