--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GRFTLLCD6N"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-GRFTLLCD6N');
+    </script>
     <title>Cyber Blog - AI Art & Tech Insights | Prompt Generator</title>
     <meta name="description" content="Latest insights on AI art, cyberpunk culture, and prompt engineering. Stay updated with the future of digital creativity.">
     <meta name="keywords" content="AI art blog, cyberpunk culture, prompt engineering, AI creativity, digital art">
