--- a/generator.html
+++ b/generator.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GRFTLLCD6N"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-GRFTLLCD6N');
+    </script>
     <title>AI Prompt Generator Tool - Create Custom AI Image Prompts</title>
     <meta name="description" content="Advanced AI prompt generator with 10 categories and 40,000+ combinations. Create custom prompts for Midjourney, DALL-E, and Stable Diffusion.">
     <meta name="keywords" content="AI prompt generator, Midjourney prompts, DALL-E prompts, cyberpunk prompts, AI art generator, prompt engineering">
