--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GRFTLLCD6N"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-GRFTLLCD6N');
+    </script>
     <title>AI Prompt Generator - Create AI Art Prompts with a Difference | Free Tool</title>
     <meta name="description" content="Generate millions of unique AI image prompts for Midjourney, DALL-E, and Stable Diffusion. Free cyberpunk prompt generator with 40,000+ combinations.">
     <meta name="keywords" content="AI prompt generator, Midjourney prompts, DALL-E prompts, cyberpunk prompts, AI art generator, prompt engineering">
