--- a/resources.html
+++ b/resources.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GRFTLLCD6N"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-GRFTLLCD6N');
+    </script>
     <title>Resources - AI Art & Tech Tools | Prompt Generator</title>
     <meta name="description" content="Curated resources for AI art, prompt engineering, and tech tools">
     <link rel="icon" type="image/png" href="favicon.png">
