--- a/index.html
+++ b/index.html
@@ -464,6 +464,34 @@
                 padding: 16px;
             }
         }
+
+        .footer {
+            background: rgba(10, 10, 15, 0.95);
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            padding: 40px 20px;
+            text-align: center;
+            margin-top: 80px;
+        }
+
+        .footer-content {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .footer-text {
+            color: #6b7280;
+            font-size: 0.9rem;
+        }
+
+        .footer-link {
+            color: #9ca3af;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .footer-link:hover {
+            color: #a855f7;
+        }
     </style>
 </head>
 <body>
@@ -2062,5 +2090,15 @@
         // Initialize with Cyber-Mythos as default
         let currentPack = 'cyber-mythos';
     </script>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <p class="footer-text">
+                © 2024 Prompt Generator created by OddestHistory_ All rights reserved. | 
+                <a href="https://x.com/OddestHistory_" target="_blank" class="footer-link">X</a> | 
+                <a href="/terms.html" target="_blank" class="footer-link">Terms of Service</a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
